[package]
name = "fusebox"
version = "0.8.3"
edition = "2021"
description = "Mostly safe and sound append-only collection of trait objects."
repository = "https://github.com/JohnDowson/fusebox"
license-file = "LICENSE"
categories = ["data-structures"]
keywords = ["trait", "dynamic", "collection", "heterogeneous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# bench = ["dep:criterion", "dep:rand", "dep:pprof", "dep:bumpalo"]
bench = ["dep:criterion", "dep:pprof", "dep:bumpalo"]

[dependencies]
criterion = { version = "0.4.0", features = ["html_reports"], optional = true }
rand = { version = "0.8.5", optional = false }
pprof = { version = "0.11.0", features = [
    "flamegraph",
    "criterion",
], optional = true }
bumpalo = { version = "3.11.1", features = ["boxed"], optional = true }

# [dependencies]
# criterion = { version = "0.4.0", features = ["html_reports"] }
# rand = { version = "0.8.5" }
# pprof = { version = "0.11.0", features = ["flamegraph", "criterion"] }
# bumpalo = { version = "3.11.1", features = ["boxed"] }

[[bench]]
name = "benchmark"
harness = false
